<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath/>
    </parent>

    <groupId>org.vaadin</groupId>
    <artifactId>bakery</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Bakery</name>
    <description>Vaadin 25 + Spring Boot 4 Application</description>

    <modules>
        <module>bakery-common</module>
        <module>bakery-jpamodel</module>
        <module>bakery-jpaclient</module>
        <module>bakery-uimodel</module>
        <module>bakery-service</module>
        <module>bakery-jpaservice</module>
        <module>bakery-ui</module>
        <module>bakery-app</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <vaadin.version>25.0.4</vaadin.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <h2.version>2.4.240</h2.version>
        <line-awesome.version>2.1.0</line-awesome.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Project modules -->
            <dependency>
                <groupId>org.vaadin</groupId>
                <artifactId>bakery-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.vaadin</groupId>
                <artifactId>bakery-jpamodel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.vaadin</groupId>
                <artifactId>bakery-jpaclient</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.vaadin</groupId>
                <artifactId>bakery-uimodel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.vaadin</groupId>
                <artifactId>bakery-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.vaadin</groupId>
                <artifactId>bakery-jpaservice</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.vaadin</groupId>
                <artifactId>bakery-ui</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- Database -->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>

            <!-- Icons -->
            <dependency>
                <groupId>org.parttio</groupId>
                <artifactId>line-awesome</artifactId>
                <version>${line-awesome.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.vaadin</groupId>
                    <artifactId>vaadin-maven-plugin</artifactId>
                    <version>${vaadin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>vaadin-addons</id>
            <url>https://maven.vaadin.com/vaadin-addons</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>
</project>
